Added OpenAPI 3.0.0-rc0  API doc contract on /api/openapi.json. Changed to public with links in login page.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -818,3 +818,12 @@ ul.datetime-picker-dropdown {
 		visibility:  visible;
 	}
 }
+
+.apidoc-table th {
+	text-align: left;
+	padding-left: 0px;
+}
+.apidoc-table td {
+	text-align: left;
+	padding-right: 1em;
+}
