--- a/public/views/login.html
+++ b/public/views/login.html
@@ -31,6 +31,47 @@
 				</a>
 			</div>
 		</div>
+		<div>
+			<h3>API docs:</h3>
+			<table class="apidoc-table">
+				<thead>
+					<tr>
+						<th class="col-md-5">Version Spec.</th>
+						<th class="col-md-3">JSON</th>
+						<th class="col-md-2">Explorer</th>
+						<th class="col-md-2">Validation</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Swagger v. 1.1</td>
+						<td><a href="/api/documentation" target="_blank">raw</a></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Swagger v. 2.0</td>
+						<td>
+							<a href="/api/swagger.json" target="_blank">raw</a>
+						</td>
+						<td>
+							<a href="http://petstore.swagger.io/?url={{serviceUriBase}}/api/swagger.json" target="_blank">Api Explorer</a>
+						</td>
+						<td>
+							<a href="http://online.swagger.io/validator/debug/?url={{serviceUriBase}}/api/swagger.json" target="_blank">
+								<img src="http://online.swagger.io/validator/?url={{serviceUriBase}}/api/swagger.json">
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td>OpenAPI v. 3.0.0-RC0</td>
+						<td><a href="/api/openapi.json" target="_blank">raw</a></td>
+						<td></td>
+						<td></td>
+					</tr>					
+				</tbody>
+			</table>			
+		</div>
 		<br/>
 	</div>
 	<div class="col-md-4"></div>
