--- a/public/views/main.html
+++ b/public/views/main.html
@@ -72,10 +72,10 @@
 			<span ></span> 
 			<a href="/api/swagger.json" target="_blank" translate="main.raw"></a>,
 			<span translate="main.orWith"></span> 
-			<a href="http://petstore.swagger.io/?url={{serviceUriBase}}/api/swagger.json%3Fapikey={{apikey}}" target="_blank" translate="main.apiExplorer"></a>.
+			<a href="http://petstore.swagger.io/?url={{serviceUriBase}}/api/swagger.json" target="_blank" translate="main.apiExplorer"></a>.
 		</p>
-		<a href="http://online.swagger.io/validator/debug/?url={{serviceUriBase}}/api/swagger.json%3Fapikey={{apikey}}" target="_blank">
-			<img src="http://online.swagger.io/validator/?url={{serviceUriBase}}/api/swagger.json%3Fapikey={{apikey}}">
+		<a href="http://online.swagger.io/validator/debug/?url={{serviceUriBase}}/api/swagger.json" target="_blank">
+			<img src="http://online.swagger.io/validator/?url={{serviceUriBase}}/api/swagger.json">
 		</a>
 
 	</div>
