Upgrade online.swagger.io to https trafic

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -74,8 +74,8 @@
 			<span translate="main.orWith"></span> 
 			<a href="http://petstore.swagger.io/?url={{serviceUriBase}}/api/swagger.json" target="_blank" translate="main.apiExplorer"></a>.
 		</p>
-		<a href="http://online.swagger.io/validator/debug/?url={{serviceUriBase}}/api/swagger.json" target="_blank">
-			<img src="http://online.swagger.io/validator/?url={{serviceUriBase}}/api/swagger.json">
+		<a href="https://online.swagger.io/validator/debug/?url={{serviceUriBase}}/api/swagger.json" target="_blank">
+			<img src="https://online.swagger.io/validator/?url={{serviceUriBase}}/api/swagger.json">
 		</a>
 
 	</div>
