--- a/public/views/login.html
+++ b/public/views/login.html
@@ -55,11 +55,11 @@
 							<a href="/api/swagger.json" target="_blank">raw</a>
 						</td>
 						<td>
-							<a href="http://petstore.swagger.io/?url={{serviceUriBase}}/api/swagger.json" target="_blank">Api Explorer</a>
+							<a href="https://petstore.swagger.io/?url={{serviceUriBase}}/api/swagger.json" target="_blank">Api Explorer</a>
 						</td>
 						<td>
-							<a href="http://online.swagger.io/validator/debug/?url={{serviceUriBase}}/api/swagger.json" target="_blank">
-								<img src="http://online.swagger.io/validator/?url={{serviceUriBase}}/api/swagger.json">
+							<a href="https://online.swagger.io/validator/debug/?url={{serviceUriBase}}/api/swagger.json" target="_blank">
+								<img src="https://online.swagger.io/validator/?url={{serviceUriBase}}/api/swagger.json">
 							</a>
 						</td>
 					</tr>
