Upgraded to baucis-openapi3 0.1.2.  Added openapi3 validation badge

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -67,7 +67,11 @@
 						<td>OpenAPI v. 3.0.0-RC0</td>
 						<td><a href="/api/openapi.json" target="_blank">raw</a></td>
 						<td></td>
-						<td></td>
+						<td>
+							<a href="https://openapi-converter.herokuapp.com/api/v1/validate?url={{serviceUriBase}}/api/openapi.json" target="_blank">
+								<img src="https://openapi-converter.herokuapp.com/api/v1/badge?url={{serviceUriBase}}/api/openapi.json">
+							</a>
+						</td>
 					</tr>					
 				</tbody>
 			</table>			
