--- a/public/views/login.html
+++ b/public/views/login.html
@@ -66,7 +66,9 @@
 					<tr>
 						<td>OpenAPI v. 3.0.0-RC0</td>
 						<td><a href="/api/openapi.json" target="_blank">raw</a></td>
-						<td></td>
+						<td>
+							<a href="https://petstore.swagger.io/?url={{serviceUriBase}}/api/openapi.json" target="_blank">Api Explorer</a>
+						</td>
 						<td>
 							<a href="https://openapi-converter.herokuapp.com/api/v1/validate?url={{serviceUriBase}}/api/openapi.json" target="_blank">
 								<img src="https://openapi-converter.herokuapp.com/api/v1/badge?url={{serviceUriBase}}/api/openapi.json">
