--- a/public/views/login.html
+++ b/public/views/login.html
@@ -64,7 +64,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td>OpenAPI v. 3.0.0-RC0</td>
+						<td>OpenAPI v. 3.0.0</td>
 						<td><a href="/api/openapi.json" target="_blank">raw</a></td>
 						<td>
 							<!--
